# IRattack

./: .gitignore  CMakeLists.txt  README.md  basic_blocks_info.json  experiment_script.md  model.pth  nop.json  probability_log  requirements.txt  xuange
include/: AsmInstruction.hpp  Attack.hpp  BogusControlFlow.hpp  BogusControlFlowPass.hpp  FlatPlus.hpp  FlatPlusPass.hpp  IRFile.hpp  IRFunction.hpp  OutputHandler.h  OutputHandler.hpp
log/: record_file.txt  record_file.txt_10  record_file.txt_2  record_file.txt_20  record_file.txt_5  record_file_feature.txt  record_file_feature_cub3.txt  record_file_feature_phide.txt
py/: IMaler_attack.py  SRL_attack.py  actor_critic.py  attack.py  confidence.py  fuzz_attack.py  new_fuzz_attack.py  test.py  test_asm.py  test_cam.py
py/custom_class/: asminstruction.py  irblock.py  irfile.py
py/model/record/: DGCNN_20.pth  DGCNN_9.pth  GIN0WithJK_20.pth  GIN0WithJK_9.pth  GIN0_20.pth  GIN0_9.pth  PE_best_val_acc.txt  PE_dgcnn_2.pth  best_val_acc.txt  dgcnn_2.pth  log  semantics_dgcnn_2.pth
py/model/record/old/: DGCNN_20.pth  DGCNN_9.pth  GIN0WithJK_9.pth  GIN0_9.pth  best_val_acc.txt  log
py/model/src/dataset_construct/: asm.py  disassemble.py  nop_feature.py  run_disassemble.py  run_extract_cfg.py
py/model/src/gnn/: dataset.py  model.py  run_measure.py  train.py
py/model/src/gnn/sortaggregation/: CustomSortAggregation.py
py/statistics/: advsample_stats.py  attack_stats.py  bb_contribute.py  dir_test.py  edge_contribute.py  graph_size_sorted.py  iteration.py  model_time.py  mutation_stats.py
src/: AsmInsertionPass.cpp  AsmInsertionPassFuzz.cpp  AsmInstruction.cpp  BasicBlockCount.cpp  BasicBlockCountPass.cpp  BogusControlFlow.cpp  CMakeLists.txt  FlatPlus.cpp  IRFile.cpp  IRFunction.cpp  LegacyIndirectBrExpand.cpp  LegacyLowerSwitch.cpp  OutputHandler.cpp  SplitBasicBlockPass.cpp  test
